Disables warnings about pdf variables unless a property is set to true.